--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body> 
     <img src="image/zed.jpg" id="fond" alt="fond">
-    <h1>Est-tu prêt pour ce quizz venu d'un autre univers?(y'a pas de troll dans les réponses)</h1>
+    <h1>Es-tu prêt pour ce quizz venu d'un autre univers?(y'a pas de troll dans les réponses)</h1>
     
     
     <form id = "quizz" name = "quizz">
