--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
 
 <p class = "questions">Quel est le plat préféré de Casimir?</p>
-<input type="radio" id="mc" name="question1" value="Gloubi-Boulga"> <h5 class="reponse"> Gloubi-Boulga</h5><br>
+<input type="radio" id="mc" name="question1" value="Gloubi-Boulga" id="titre"> <h5 class="reponse"> Gloubi-Boulga</h5><br>
 <!-- c'est la bonne réponse !-->
 <input type="radio" id="mc" name="question1" value="Du lait"> <h5 class="reponse">Du lait</h5><br>
 <input type="radio" id="mc" name="question1" value="Des nuages"> <h5 class="reponse">Des nuages</h5>
@@ -70,7 +70,9 @@
 <input type = "radio" id = "mc" name = "question9" value = "Caddie & Kator">  <h5 class="reponse">Caddie & Kator  </h5><br>
 <input type = "radio" id = "mc" name = "question9" value = "Cassie & Kastor"> <h5 class="reponse"> Cassie & Kastor</h5><br>
 <input type = "radio" id = "mc" name = "question9" value = "Cathy & Kador"> <h5 class="reponse"> Cathy & Kador</h5><br>
-<input id = "button" type = "button" value = "valider" onclick = "check();">
+<div>
+    <input id = "button" type = "button" value = "valider" onclick = "check();">
+</div>
 
 
 <p>regarde en haut une fois le quizz terminé</p>
