--- a/index.html
+++ b/index.html
@@ -69,13 +69,14 @@
 <p class = "questions">Lydie est une petite fille, toute blonde et gentille. Oui, bon, ok, c’est bien beau tout ça, mais qui sont ses amis ?</p>
 <input type = "radio" id = "mc" name = "question9" value = "Caddie & Kator">  <h5 class="reponse">Caddie & Kator  </h5><br>
 <input type = "radio" id = "mc" name = "question9" value = "Cassie & Kastor"> <h5 class="reponse"> Cassie & Kastor</h5><br>
-<input type = "radio" id = "mc" name = "question9" value = "Cathy & Kador"> <h5 class="reponse"> Cathy & Kador</h5><br>
-<div>
-    <input id = "button" type = "button" value = "valider" onclick = "check();">
-</div>
+<input type = "radio" id = "mc" name = "question9" value = "Cathy & Kador"> <h5 class="reponse"> Cathy & Kador</h5>
+ <input id = "button" type = "button" value = "valider" onclick = "check();" href="#">
 
 
-<p>regarde en haut une fois le quizz terminé</p>
+    <p id="fin">regarde en haut une fois le quizz terminé</p>
+    <p id="btn-default">
+    <a href="#"  >Retour en haut ↑</a>
+</p>
 </form>
 <div id = "after_submit">
 <p id = "number_correct"></p>
