--- a/cadeau.html
+++ b/cadeau.html
@@ -9,9 +9,8 @@
     
     <body> 
         <img src="image/darth_maul.jpg" alt="fond" id="fond">
-<p>De la part de toute la communauté (video 1 à regarder en premier):</p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/VPVm8rQ12mM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/aBlegYqq8cg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+<p>De la part de toute la communauté:</p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WQgpPKnMx74" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 
 
