--- a/index.html
+++ b/index.html
@@ -67,9 +67,15 @@
 
 
 <p class = "questions">Lydie est une petite fille, toute blonde et gentille. Oui, bon, ok, c’est bien beau tout ça, mais qui sont ses amis ?</p>
-<input type = "radio" id = "mc" name = "question9" value = "Caddie & Kator">  <h5 class="reponse">Caddie & Kator  </h5><br>
-<input type = "radio" id = "mc" name = "question9" value = "Cassie & Kastor"> <h5 class="reponse"> Cassie & Kastor</h5><br>
-<input type = "radio" id = "mc" name = "question9" value = "Cathy & Kador"> <h5 class="reponse"> Cathy & Kador</h5>
+<input type = "radio" id = "mc" name = "question9" value = "Caddie & Kator">  <h5 class="reponse">Caddie & Kator </h5><br>
+<input type = "radio" id = "mc" name = "question9" value = "Cassie & Kastor"> <h5 class="reponse">Cassie & Kastor</h5><br>
+<input type = "radio" id = "mc" name = "question9" value = "Cathy & Kador"> <h5 class="reponse">Cathy & Kador</h5>
+
+<p class = "questions">Quelle est le plat préféré de Naruto ?</p>
+<input type = "radio" id = "mc" name = "question10" value = "des sushis">  <h5 class="reponse">des sushis</h5><br>
+<input type = "radio" id = "mc" name = "question10" value = "des ramens"> <h5 class="reponse">des ramens</h5><br>
+<!--bonne réponse-->
+<input type = "radio" id = "mc" name = "question10" value = "des bao poulet teriyaki"> <h5 class="reponse">des bao poulet teriyaki</h5>
  <input id = "button" type = "button" value = "valider" onclick = "check();" href="#">
 
 
