test du responsive

--- a/html/maformation.html
+++ b/html/maformation.html
@@ -10,7 +10,7 @@
 		<img src="../img/fond.jpg" alt="fond" class="fond"  >
 		
 		<header>
-			<h1 class="cv"><a href="../index.html">🏠</a></h1>
+			<h1 class="cv titre"><a href="../index.html">🏠 Ludovic Henry développeur web</a></h1>
 			<input type="checkbox" class="nav-toggle" id="nav-toggle">
 			
 				<!-- barre de navigation-->
