--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<img src="./img/fond.jpg" alt="fond" class="fond"  >
 		
 		<header>
-			<h1 class="cv"><a href="#">🏠</a></h1>
+			<h1 class="cv titre"><a href="#">🏠 Ludovic Henry développeur web</a></h1>
 			<input type="checkbox" class="nav-toggle" id="nav-toggle">
 			
 				<!-- barre de navigation-->
