--- a/html/competences.html
+++ b/html/competences.html
@@ -43,10 +43,10 @@
 		                <p>-wamp</p>
 						<br>
 						<p>-Analyser les besoin du client</p>
-						<p> -établir un cahier des charges</p>
-						<p> -concevoir et développer les programmes et applications informatiques</p>
-						<p> -analyser les problèmes techniques</p>
-						<p> -Déterminé des mesures correctives</p>
+						<p class="margin-top"> -établir un cahier des charges</p>
+						<p class="margin-top"> -concevoir et développer les programmes et applications informatiques</p>
+						<p class="margin-top"> -analyser les problèmes techniques</p>
+						<p class="margin-top"> -Déterminé des mesures correctives</p>
 					</div>
 				
 					
