mise à jour du texte profil

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 			<!-- première section-->
 			<img id="moi" src="img/moi.png">
 			<div id="profil">
-				<p> Passionné par l’informatique depuis tout petit et ayant fait un BTS dans le domaine du numérique, le métier de développeur web est pour moi une manière de donner vie à ma passion et d’acquérir  de nouvelles compétences techniques</p>
+				<p> Passionné par l’informatique depuis mon enfance et ayant fait un BTS dans le domaine du numérique, le métier de développeur web est pour moi une manière de donner vie à ma passion et d’acquérir  de nouvelles compétences techniques</p>
 			</div>
 			<div id="centre_dinteret">
 			
