--- a/html/projet.html
+++ b/html/projet.html
@@ -41,7 +41,7 @@
 
 
 
-        <p class="projet2">
+        <p class="projet3">
 
             Site Vitrine personnelle réalisé lors d'un stage en entreprise
             
@@ -50,6 +50,10 @@
 
 
         <a href="https://github.com/ludexplo/projet_ludexplo"> <img src="../img/camera.png" class="rezise" id="photo" alt="camera"></a>  
+
+		
+		<p class="projet2"> Jeu du pendu javascript</p>
+		<a href="../html/pendu/pendu_ramdomTab.html"><img src="../img/jeu du pendu.png" class="rezise" id="jeudupendu" alt="jeu du pendu"></a>
 
 </div>
         </main>
