--- a/html/pendu/pendu_ramdomTab.html
+++ b/html/pendu/pendu_ramdomTab.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/jeudupendu.css">
     <title>Pendu_random</title>
     <script src="./mot.js"></script>
     <script>
@@ -137,23 +137,12 @@ function rejouer() {
 
     </script>
   
-   <style>
-    .pendu {
-        position: absolute;
-        top:30px;
-        left:0;
-    }
-    #imagePendu {
-        position:relative;
-        top:250px;
-        left:450px;
-    }
-</style>
+
 </head>
 <body onload="init()">
 
+    <button onclick="history.back()">←</button>
     <h1>Le jeu du pendu</h1>
-
 <div id="clavier">
     <button onclick="saisie('A');"    id="bouttonA">A</button>
     <button onclick="saisie('Z');"   id="bouttonZ">z</button>
