--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta property="og:image" content="https://avatars.githubusercontent.com/u/65920802?s=400&u=a8f8f27da8e64b3a88a41a759d62c8305b50c50b&v=4" />
+		<meta property='og:image' content='https://avatars.githubusercontent.com/u/65920802?s=400&u=a8f8f27da8e64b3a88a41a759d62c8305b50c50b&v=4' />
 		<link rel="stylesheet" href="./css/style.css">
 		<title>Cv </title>
 	</head>
