mis à jour photo de profil et image du site vitrine

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<main class="content">
 			
 			<!-- première section-->
-			<img id="moi" src="img/moi.png">
+			<img id="moi" src="img/moi.jpg">
 			<div id="profil">
 				<p> Passionné par l’informatique depuis mon enfance et ayant fait un BTS dans le domaine du numérique, le métier de développeur web est pour moi une manière de donner vie à ma passion et d’acquérir  de nouvelles compétences techniques</p>
 			</div>
